# parallel

./: .gitignore  CMakeLists.txt  create_matrix.py  draw_plot.py  main.cpp  matrixA.txt  matrixB.txt  matrixC.txt  mpi.cpp  mpi_results.txt  mult_checker.py  openmp.c  openmp_results.txt  pi-mpi.c
results/: описание.txt
